; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_dev.c_set_rps_cpu.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_dev.c_set_rps_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.sk_buff = type { i64 }
%struct.rps_dev_flow = type { i32, i64, i32 }
%struct.TYPE_3__ = type { i32 }

@RPS_NO_CPU = common dso_local global i64 0, align 8
@softnet_data = common dso_local global i32 0, align 4
@NETIF_F_NTUPLE = common dso_local global i32 0, align 4
@RPS_NO_FILTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.rps_dev_flow* (%struct.net_device*, %struct.sk_buff*, %struct.rps_dev_flow*, i64)* @set_rps_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.rps_dev_flow* @set_rps_cpu(%struct.net_device* %0, %struct.sk_buff* %1, %struct.rps_dev_flow* %2, i64 %3) #0 {
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.sk_buff*, align 8
  %7 = alloca %struct.rps_dev_flow*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_3__, align 4
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %6, align 8
  store %struct.rps_dev_flow* %2, %struct.rps_dev_flow** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i64, i64* %8, align 8
  %11 = load i64, i64* @RPS_NO_CPU, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %22

13:                                               ; preds = %4
  %14 = load i32, i32* @softnet_data, align 4
  %15 = load i64, i64* %8, align 8
  %16 = call i32 @per_cpu(i32 %14, i64 %15)
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  store i32 %16, i32* %17, align 4
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.rps_dev_flow*, %struct.rps_dev_flow** %7, align 8
  %21 = getelementptr inbounds %struct.rps_dev_flow, %struct.rps_dev_flow* %20, i32 0, i32 2
  store i32 %19, i32* %21, align 8
  br label %22

22:                                               ; preds = %13, %4
  %23 = load i64, i64* %8, align 8
  %24 = load %struct.rps_dev_flow*, %struct.rps_dev_flow** %7, align 8
  %25 = getelementptr inbounds %struct.rps_dev_flow, %struct.rps_dev_flow* %24, i32 0, i32 1
  store i64 %23, i64* %25, align 8
  %26 = load %struct.rps_dev_flow*, %struct.rps_dev_flow** %7, align 8
  ret %struct.rps_dev_flow* %26
}

declare dso_local i32 @per_cpu(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
